OO-3296: adapt REST API to the new roles and organisations structure, make change in upgrader (12.x admin become administrator, sysadmin adn roles manager, 12.x user manager become user managers and roles managers)